bug squashing

--- a/css/orbital-sim.css
+++ b/css/orbital-sim.css
@@ -10,6 +10,7 @@ canvas {
     position: absolute;
     top: 0;
     left: 0;
+    margin: 0;
 }
 
 #object2 {
@@ -20,6 +21,7 @@ canvas {
     position: absolute;
     top: 0;
     left: 0;
+    margin: 0;
 }
 
 .orbit-sim {
